--- a/index.html
+++ b/index.html
@@ -31,35 +31,30 @@
     }
 
     h1 {
-      font-size: 2.3rem;
+      font-size: 2.2rem;
       margin-bottom: 10px;
     }
 
     .email {
       margin-bottom: 20px;
-      font-size: 1rem;
     }
 
     .email a {
-      color: #007bff;
+      color: #3399ff;
       text-decoration: none;
-    }
-
-    .email a:hover {
-      animation: shake 0.3s infinite;
     }
 
     .links {
       display: flex;
       justify-content: center;
-      gap: 40px;
+      gap: 30px;
     }
 
     .links a {
       text-decoration: none;
-      color: #007bff;
-      font-size: 1.1rem;
-      transition: transform 0.1s ease-in-out;
+      color: #3399ff;
+      font-size: 1rem;
+      transition: transform 0.2s ease-in-out;
     }
 
     .links a:hover {
