--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <a href="mailto:malsamhan1@outlook.com">malsamhan1@outlook.com</a>
     </div>
     <div class="links">
-      <a href="https://x.com/MALsamhan9" target="_blank">X Program</a>
+      <a href="https://x.com/MALsamhan9" target="_blank">X</a>
       <a href="https://www.linkedin.com/in/mohammed-alsamhan-839002334" target="_blank">LinkedIn</a>
     </div>
   </div>
